WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161138
AssemblyHelpers::emitAllocateWithNonNullAllocator() crashes in the FTL on ARM64
https://bugs.webkit.org/show_bug.cgi?id=161138
Summary
AssemblyHelpers::emitAllocateWithNonNullAllocator() crashes in the FTL on ARM64
Filip Pizlo
Reported
2016-08-24 06:56:34 PDT
The FTL expects that this method can be used with scratch registers disallowed, but it uses addPtr(Addr, Reg). The solution is to not use addPtr(Addr, Reg).
Attachments
the patch
(1.83 KB, patch)
2016-08-24 06:57 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-08-24 06:57:53 PDT
Created
attachment 286851
[details]
the patch
WebKit Commit Bot
Comment 2
2016-08-24 09:25:25 PDT
Comment on
attachment 286851
[details]
the patch Clearing flags on attachment: 286851 Committed
r204897
: <
http://trac.webkit.org/changeset/204897
>
WebKit Commit Bot
Comment 3
2016-08-24 09:25:29 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug