AssemblyHelpers::emitAllocateWithNonNullAllocator() crashes in the FTL on ARM64 https://bugs.webkit.org/show_bug.cgi?id=161138 rdar://problem/27985868

Reviewed by Saam Barati.

The FTL expects that this method can be used with scratch registers disallowed, but it
uses addPtr(Addr, Reg).

The solution is to only use addPtr(Addr, Reg) on x86.

* jit/AssemblyHelpers.h:
(JSC::AssemblyHelpers::emitAllocateWithNonNullAllocator):


Canonical link: https://commits.webkit.org/179283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204897 268f45cc-cd09-0410-ab3c-d52691b4dbfc